# Derfuu_ComfyUI_ModdedNodes

./: .gitignore  README.md  __init__.py  nodeTemplate.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
Nodes/Custom/: Types.py  __init__.py
Nodes/Debug/: Debug.py  __init__.py  debugNodes.py
Nodes/Functions/: Converters.py  GetSizes.py  Random.py  Tuples.py  __init__.py
Nodes/Math/: SimpleMath.py  Trigonometry.py  __init__.py
Nodes/Modded/: Condotionig.py  Images.py  Latents.py  __init__.py
Nodes/Modded/StandardInputs/: Condotionig.py  Images.py  Latents.py
Nodes/Modded/StandartInputs/: Latents.py
Nodes/Modded/TuplesUsed/: Conditioning.py  Latents.py
components/: fields.py  sizes.py  tree.py  types.py
nodes_info_examples/: string_functions_info.json
nodes_info_workflows/: string_functions_info.json
pyscripts/Nodes/Custom/: LogicNode.py  Types.py
pyscripts/Nodes/Debug/: Debug.py
pyscripts/Nodes/Functions/: Converters.py  GetSizes.py  Random.py  Strings.py  Tuples.py
pyscripts/Nodes/Math/: SimpleMath.py  Trigonometry.py
pyscripts/Nodes/Modded/: Conditioning.py  Images.py  Latents.py
pyscripts/Nodes/Modded/StandardInputs/: Condotionig.py  Images.py  Latents.py
pyscripts/Nodes/Modded/TuplesUsed/: Conditioning.py  Latents.py
pyscripts/components/: colors.py  colours.py  fields.py  sizes.py  tree.py
scripts/: debugNode.js
utility/: mapping_replace.py
workflow_examples/: 0.3.5_demo.json  0.4.0_demo.json  0.5.0_demo.json
